fixed color contrast error at the AA and AAA levels

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -7,13 +7,14 @@
 
 body {
     margin: 0 30px;
+    background-color: #FFFFFF;
 }
 
 header {
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 3fr 1fr;
-    background-color: darkblue;
+    background-color: #E6F0FF;
 }
 
 header nav {
@@ -21,13 +22,13 @@ header nav {
     justify-content: space-evenly;
     align-items: center;
     grid-column: 2;
-    border: 2px solid #ccc;
+    border: 2px solid #003366;
     border-radius: 5px;
 }
 
 nav a {
     text-decoration: none;
-    color: white;
+    color: #003366;
     padding: 10px;
     font-family:Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -133,11 +134,7 @@ figure {
 h1, h2 { 
     font-family: 'Roboto', serif;
     text-transform: uppercase;
-    color: var(--accent2-color);
-}
-
-p {
-    font-family: "Open Sans", sans-serif;
+    color: #003366;
 }
 
 .sociallinks a {
@@ -175,9 +172,13 @@ p {
     bottom: 10%; /* Adjust to control the space from the bottom of the hero image */
     left: 5%;
     right: 5%;
-    background-color: rgba(31, 125, 159, 0.5); /* Semi-transparent black background for readability */
+    background-color: #525252; /* Semi-transparent black background for readability */
     padding: 20px;
     color: white;
+}
+
+article p {
+    color: #FFFFFF; /* White */
 }
 
 .hero article img {
@@ -199,7 +200,7 @@ footer {
     display: grid;
     grid-template-columns: 2fr 1fr;
     margin-top: 10px;
-    background-color: lightgray;
+    background-color: #333333;
     padding: 5px;
 }
 
@@ -210,4 +211,5 @@ footer {
 
 footer p {
     text-align: right;
+    color: #FFFFFF;
 }
